# Burn-Playground

./: README.md
ForeRustBE/: Cargo.toml
ForeRustBE/src/: data.rs  inference.rs  main.rs  model.rs  training.rs
ForeRustBE/src/api/: get.rs  mod.rs
ForeRustFE/src/: Home.tsx  index.css  main.tsx
